# gb-emu

./: .clang-format  .gitignore  CMakeLists.txt  README.md
devlog/: 2025-09-23.md  2025-10-20.md
include/: arithmetic.h  bit.h  call.h  common.h  cpu.h  emulator.h  flags.h  instructions.h  interrupt.h  lcd.h  load.h  memory.h  miscellaneous.h  mmu.h  ppu.h  registers.h  rom.h  shifts.h  video.h
include/instructions/: arithmetic.h  bit.h  call.h  instructions.h  jump.h  load.h  miscellaneous.h  shifts.h
lib/: CMakeLists.txt
src/: CMakeLists.txt  arithmetic.c  bit.c  call.c  common.c  cpu.c  instructions.c  interrupt.c  jump.c  lcd.c  load.c  main.c  memory.c  miscellaneous.c  ppu.c  registers.c  rom.c  shifts.c  video.c
src/instructions/: CMakeLists.txt  arithmetic.c  bit.c  call.c  instructions.c  jump.c  load.c  miscellaneous.c  shifts.c
tools/: new_log.sh
